# learnOpengl

./: CMakeLists.txt  main.cpp
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
MainView/: Window.cpp  Window.h  main.cpp
